syntax = "proto3";

option go_package = "github.com/xh23123/IT_hftcommon/pkg/crexServer/codec/message";

enum Reqtype {
    HTTP = 0;
    WEBSOCKET = 1;
    WEBSOCKETWRITE = 2;
    WEBSOCKETPUSH = 3;
    HEARTBEAT = 4;
}

message HeaderPair {
    string key = 1;
    repeated string value = 2;
}

message Header {
    repeated HeaderPair headerPair = 1;
}

message HttpReq {
    string url = 1;
    Header header = 2;
    bytes Body = 3;
    uint32 timeout = 4;
    string method = 5;
}

message HttpResp {
    uint32 statusCode = 1;
    bytes resp = 2;
    string error = 3;
}

message WebsocketStartReq {
    string url = 1;
}

message WebsocketStartResp {
    string error = 1;
}

message WebsocketWriteReq {
    uint32 messageType = 1;
    bytes message = 2;
}

message WebsocketWriteRsp {
    uint32 messageType = 1;
    bytes message = 2;
}

message WebsocketPushMessage {
    uint32 messageType = 1;
    bytes message = 2;
}

message ProxyReq {
    Reqtype type = 1;
    bytes message = 2;
    string seq = 3;
}

message ProxyRsp {
    Reqtype type = 1;
    bytes message = 2;
    string seq = 3;
    string error = 4;
    string code = 5;
}

// protoc --go_opt=paths=source_relative --proto_path=. --go_out=. .\message.proto